sumo/tests/netgen/errors/grid_errors/testsuite.netgen
# 0 as the value for grid-number
grid_number__zero

# 0 as the value for grid-x-number
grid_x_number__zero

# 0 as the value for grid-y-number
grid_y_number__zero



# 0 as the value for grid-length
grid_length__zero

# 0 as the value for grid-x-length
grid_x_length__zero

# 0 as the value for grid-y-length
grid_y_length__zero




